fix: resolve medium SonarQube issues